--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.spigotmc:spigot:1.8.8-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot:1.8.8-R0.1-SNAPSHOT'
+    compileOnly("org.projectlombok:lombok:1.18.38")
+    
+    annotationProcessor("org.projectlombok:lombok:1.18.38")
+
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 }
 
