refactor(naming): rename variables and identifiers to follow best programming practices

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: MushrimHG
 version: 1.0
-main: me.mushrim.hg.Main
+main: me.mushrim.hg.HGPlugin
 author: Harium
 description: Um plugin de Hunger Games para Spigot 1.8.9
 commands:
